--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Giới thiệu bản thân</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            text-align: center;
+            padding: 50px;
+        }
+        img {
+            
+            width: 200px;
+            height: 200px;
+            object-fit: cover;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+        .container {
+            background-color: white;
+            border-radius: 10px;
+            padding: 30px;
+            max-width: 600px;
+            margin: auto;
+            box-shadow: 0 0 15px rgba(0,0,0,0.1);
+        }
+        h1, h2 {
+            color: #333;
+        }
+        p {
+            color: #555;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="container">
+        <div>
+            <img src="./avatar.jpg" alt="">
+        </div>
+        <h1>Xin chào!</h1>
+        <h2>Tôi là Mai Tấn Trung</h2>
+        <p>Hiện tại tôi đang là sinh viên tại <strong>Trường Đại học Công nghệ</strong>.</p>
+        <p>Tôi đang học và tìm hiểu về lập trình web, Python, và các công nghệ phát triển phần mềm hiện đại.</p>
+    </div>
 </body>
 </html>
